Slight fix for move&mod spacing. Tag before experiment.

--- a/HeroSystem6eHeroic/HeroSystem6eHeroic.css
+++ b/HeroSystem6eHeroic/HeroSystem6eHeroic.css
@@ -1310,6 +1310,7 @@ select:focus + .focus {
 	align-items: baseline;
 	padding-left: 3px;
 	padding-right: 1px;
+	gap: 6px;
 	width: 148px;
 }
 
@@ -1380,7 +1381,14 @@ select:focus + .focus {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: baseline;
-	max-width: 68px;
+}
+
+.item-characteristics-propulsion-system-row .subitem-characteristics-system-value:nth-child(1) {
+	min-width: 75px;
+}
+
+.item-characteristics-propulsion-system-row .subitem-characteristics-system-value:nth-child(2) {
+	min-width: 60px;
 }
 
 .item-characteristics-power-system-row .custom-select-alternate,
